--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
 		"plugin:prettier/recommended"
 	],
 	"rules": {
-		"react/react-in-jsx-scope": 0
+		"react/react-in-jsx-scope": 0,
+		"@typescript-eslint/explicit-module-boundary-types": 0
 	}
 }
