--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"typescript": "^4"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.4.0",
 		"react": "^17",
 		"react-dom": "^17",
 		"vite": "^2.4.4"
