--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,11 @@
 		"project": ["./tsconfig.json"]
 	},
 	"plugins": ["only-error"],
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	},
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
