--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"serve": "vite preview",
-		"lint": "eslint --ignore-path=.gitignore ."
+		"lint-js": "eslint --ignore-path=.gitignore .",
+		"lint-css": "stylelint --ignore-path=.gitignore '**/*.ts{x,}'"
 	},
 	"author": "Sine Gadot (https://github.com/nonAlgebraic)",
 	"license": "MIT",
@@ -16,11 +17,11 @@
 		"singleQuote": true
 	},
 	"devDependencies": {
-		"@types/react": "^17.0.15",
-		"@types/react-dom": "^17.0.9",
+		"@types/react": "^17",
+		"@types/react-dom": "^17",
 		"@typescript-eslint/eslint-plugin": "^4",
 		"@typescript-eslint/parser": "^4",
-		"@vitejs/plugin-react-refresh": "^1.3.6",
+		"@vitejs/plugin-react-refresh": "^1",
 		"eslint": "^7",
 		"eslint-config-prettier": "^8",
 		"eslint-plugin-import": "^2",
@@ -30,12 +31,18 @@
 		"eslint-plugin-react": "^7",
 		"eslint-plugin-react-hooks": "^4",
 		"prettier": "^2",
+		"stylelint": "^13",
+		"stylelint-config-prettier": "^8",
+		"stylelint-config-rational-order": "^0",
+		"stylelint-config-recommended": "^5",
+		"stylelint-order": "^4",
+		"stylelint-prettier": "^1",
 		"typescript": "^4"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.4.0",
+		"@emotion/react": "^11",
 		"react": "^17",
 		"react-dom": "^17",
-		"vite": "^2.4.4"
+		"vite": "^2"
 	}
 }
