--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
 		"build": "vite build",
 		"serve": "vite preview",
 		"lint-js": "eslint --ignore-path=.gitignore .",
-		"lint-css": "stylelint --ignore-path=.gitignore '**/*.ts{x,}'"
+		"lint-css": "stylelint --ignore-path=.gitignore '**/*.css'"
 	},
 	"author": "Sine Gadot (https://github.com/nonAlgebraic)",
 	"license": "MIT",
-	"prettier": {
-		"useTabs": true,
-		"singleQuote": true
+	"dependencies": {
+		"react": "^17",
+		"react-dom": "^17",
+		"vite": "^2"
 	},
 	"devDependencies": {
 		"@types/react": "^17",
@@ -38,10 +39,5 @@
 		"stylelint-order": "^4",
 		"stylelint-prettier": "^1",
 		"typescript": "^4"
-	},
-	"dependencies": {
-		"react": "^17",
-		"react-dom": "^17",
-		"vite": "^2"
 	}
 }
