Revert "🔥 removed emotion"
This reverts commit 53523efb5178693348cd31341e6e97ffcd533c96.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "Sine Gadot (https://github.com/nonAlgebraic)",
 	"license": "MIT",
 	"dependencies": {
+		"@emotion/react": "^11",
 		"react": "^17",
 		"react-dom": "^17",
 		"vite": "^2"
