--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@emotion/react": "^11",
+		"normalize-css": "^2.3.1",
 		"react": "^17",
 		"react-dom": "^17",
 		"vite": "^2"
