--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"serve": "vite preview",
+		"test": "jest",
 		"lint-js": "eslint --ignore-path=.gitignore .",
 		"lint-css": "stylelint --ignore-path=.gitignore '**/*.css'"
 	},
@@ -14,25 +15,31 @@
 	"license": "MIT",
 	"dependencies": {
 		"@emotion/react": "^11",
-		"normalize-css": "^2.3.1",
+		"normalize-css": "^2",
 		"react": "^17",
 		"react-dom": "^17",
 		"vite": "^2"
 	},
 	"devDependencies": {
+		"@emotion/jest": "^11",
+		"@testing-library/react": "^12",
+		"@types/jest": "^26",
 		"@types/react": "^17",
 		"@types/react-dom": "^17",
 		"@typescript-eslint/eslint-plugin": "^4",
 		"@typescript-eslint/parser": "^4",
 		"@vitejs/plugin-react-refresh": "^1",
+		"esbuild-jest-transform": "^1",
 		"eslint": "^7",
 		"eslint-config-prettier": "^8",
 		"eslint-plugin-import": "^2",
+		"eslint-plugin-jest": "^24",
 		"eslint-plugin-jsx-a11y": "^6",
 		"eslint-plugin-only-error": "^1",
 		"eslint-plugin-prettier": "^3",
 		"eslint-plugin-react": "^7",
 		"eslint-plugin-react-hooks": "^4",
+		"jest": "^27",
 		"prettier": "^2",
 		"stylelint": "^13",
 		"stylelint-config-prettier": "^8",
